<resources>
    <string name="app_name">Praxis Fashion</string>
    <string name="admin_name">Name</string>
    <string name="admin_email">Email</string>
    <string name="admin_password">Password</string>
    <string name="admin_signup_repeat_password">Repeat Password</string>
    <string name="admin_signup_phone_number">Phone Number</string>
    <string name="admin_back">Go To Home</string>
    <string name="admin_signup_register">Register</string>
    <string name="admin_login">LOGIN</string>
    <string name="admin_login_new_member">New Member?</string>
    <string name="title_activity_admin_home">admin_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_vw_customers">Customers</string>
    <string name="txt_vw_view_customers">View Customers</string>
    <string name="txt_vw_total_customers">3 Customers</string>
    <string name="txt_vw_products">Products</string>
    <string name="txt_vw_manage_products">Manage Products</string>
    <string name="txt_vw_total_products">4 Products</string>
    <string name="txt_vw_brands">Brands</string>
    <string name="txt_vw_manage_brands">Manage Brands</string>
    <string name="txt_vw_orders">Orders</string>
    <string name="txt_vw_manage_orders">Manage Orders</string>
    <string name="txt_vw_total_brands">3 Brands</string>
    <string name="txt_vw_total_orders">9 Orders</string>
    <string name="txt_vw_admins">Admins</string>
    <string name="txt_vw_total_admins">3 Admins</string>
    <string name="txt_vw_manage_admins">Manage Admins</string>
    <string name="txt_vw_top_seller">Top Seller</string>
    <string name="txt_vw_manage_top_seller">Manage Top Seller</string>
    <string name="txt_vw_total_top_sellers">3 Top</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_nav_drawer">CustomerNavDrawerActivity</string>
    <string name="logout">Log out</string>
</resources>
